# vcs

./: Cargo.toml  LICENSE  notes.md  riskanalys_vcs.md
.githooks/: pre-commit
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: lib.rs  path.rs
core/: Cargo.toml
core/src/: commit.rs  crypto.rs  diff.rs  path.rs  repo.rs  storage.rs
core/src/storage/: lazy.rs
docs/: mvp.md
report/: report.typ  slides.typ
vcs-cli/: Cargo.toml
vcs-cli/src/: main.rs
vcs-core/: Cargo.toml
vcs-core/crypto-hash-derive/: Cargo.toml
vcs-core/crypto-hash-derive/src/: lib.rs
vcs-core/src/: commit.rs  crypto.rs  diff.rs  fs.rs  lib.rs  repo.rs  revision.rs  storage.rs
vcs-core/src/crypto/: digest.rs  signature.rs
vcs-core/src/crypto/digest/: blake3.rs
vcs-core/src/diff/: diff.rs  diff_operations.rs  diff_policy.rs  file_diff.rs  hunk.rs  hunk_collection.rs  mod.rs  operations.rs  ops_stream.rs  repo_diff.rs
vcs-core/src/diff/operations/: compact.rs  compose.rs
vcs-core/src/diff/ops_stream/: compact.rs  compose.rs  mod.rs  types.rs
vcs-core/src/fs/: file.rs  path.rs
vcs-core/src/repo/: head.rs  index.rs  repo_storage.rs
vcs-core/src/revision/: author.rs  timestamp.rs
vcs-core/src/storage/: cache.rs  in_memory_storage.rs  slotmap.rs
vcs-storage-impl/: Cargo.toml
vcs-storage-impl/src/: disk.rs  memory.rs
