[package]
name = "vcs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.16.2"
blake3 = "1.8.3"
crypto-hash-derive = { path = "crypto-hash-derive" }
dashmap = "6.1.0"
bytes = "1.11.1"
elsa = "1.11.2"
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync"] }
bytemuck = { version = "1.25.0", features = ["must_cast"] }

[dev-dependencies]
vcs-storage-impl = { path = "../vcs-storage-impl" }
